--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8" />
   <title>Your Website</title>
 	
+ <link rel="icon" href="favicon.ico">	
+ 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/grid.css">				
   <link rel="stylesheet" href="css/styles.css">	
