--- a/index.html
+++ b/index.html
@@ -2,30 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width">
+
   <title>368 Website Starter</title>
-	
- <link rel="icon" href="favicon.ico">	
  
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/grid.css">				
+  <link rel="stylesheet" href="http://necolas.github.io/normalize.css/3.0.2/normalize.css">  
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
 <body>
 	
-	<!-- No Content Before -->
-	<div class="container">
-		
-
-		<h1>368 Website Starter</h1>
-
-
-		<!-- No Content After -->
-		<!-- Clearfix -->
-		<div class="clear"></div>
-
-	</div>
-	
+	<h1>368 Website Starter</h1>
   
 </body>
 </html>
